add how to create a plugin

--- a/config/custom_config.json
+++ b/config/custom_config.json
@@ -45,5 +45,9 @@
 			"blacklist": ["illegalWord1", "badWord2", "censoredWord3"]
 		}
 	},
-	"plugins": {}
+	"plugins": {
+		"helloInfo": {
+			"syncInterval": 60000
+		}
+	}
 }
